--- a/configs/.gitconfig.template
+++ b/configs/.gitconfig.template
@@ -1,6 +1,4 @@
-# SAKURAJIMA GITCONFIG — v5.0
-# NOTE: Personal identity is set in ~/.gitconfig.local (not version controlled)
-# This is just a template. The installer will prompt for your name/email.
+# Sakurajima gitconfig (optimized from Git core devs' recommendations)
 
 [init]
     defaultBranch = main
@@ -9,6 +7,14 @@
     autocrlf = input
     excludesfile = ~/.config/git/ignore
     pager = delta
+    fsmonitor = true
+    untrackedCache = true
+
+[diff]
+    algorithm = histogram
+    colorMoved = plain
+    mnemonicPrefix = true
+    renames = true
 
 [interactive]
     diffFilter = delta --color-only
@@ -17,27 +23,51 @@
     navigate = true
     light = false
 
-[pull]
-	rebase = true
+[column]
+    ui = auto
 
-[rebase]
-    autoStash = true
+[branch]
+    sort = -committerdate
+
+[tag]
+    sort = version:refname
 
 [push]
-    default = current
+    default = simple
+    autoSetupRemote = true
+    followTags = true
 
 [fetch]
     prune = true
     pruneTags = true
+    all = true
+
+[pull]
+    rebase = true
+
+[rebase]
+    autoStash = true
+    autoSquash = true
+    updateRefs = true
+
+[merge]
+    conflictstyle = zdiff3
+
+[commit]
+    verbose = true
+
+[rerere]
+    enabled = true
+    autoupdate = true
+
+[grep]
+    patternType = perl
+
+[help]
+    autocorrect = prompt
 
 [credential]
     helper = osxkeychain
 
 [include]
     path = ~/.gitconfig.local
-
-# Client-specific git identities are automatically created by 'skr new <client>'
-# Each client gets its own config at: ~/.config/git/clients/<client>.gitconfig
-# Example:
-#   [includeIf "gitdir:~/workspace/clients/acme/"]
-#       path = ~/.config/git/clients/acme.gitconfig
